# MyRasterizer

./: CMakeLists.txt
Code/include/: Camera.hpp  Color.hpp  Entity.hpp  InputManager.hpp  Light.hpp  Mat4.hpp  Mesh.hpp  Rasterizer.hpp  Scene.hpp  Texture.hpp  Timer.hpp  Tools.hpp  Vec2.hpp  Vec3.hpp  Vec4.hpp  Vertex.hpp  camera.hpp  color.hpp  entity.hpp  inputManager.hpp  light.hpp  mat4.hpp  mesh.hpp  rasterizer.hpp  scene.hpp  texture.hpp  timer.hpp  tools.hpp  vec2.hpp  vec3.hpp  vec4.hpp  vertex.hpp  window.h
Code/src/: Camera.cpp  Entity.cpp  InputManager.cpp  Light.cpp  Mesh.cpp  Rasterizer.cpp  Scene.cpp  Texture.cpp  Timer.cpp  camera.cpp  entity.cpp  inputManager.cpp  light.cpp  main.cpp  mesh.cpp  rasterizer.cpp  scene.cpp  texture.cpp  timer.cpp  window.cpp
